--- a/src/main/resources/templates/gp/patients_list.html
+++ b/src/main/resources/templates/gp/patients_list.html
@@ -34,10 +34,10 @@
                         <a th:href="@{'addpatient/' }" class="btn btn btn-primary btn-rounded float-right"><i class="fa fa-plus"></i> Add Patient</a>
                     </div>
                 </div>
-             <div>&nbsp;</div>
+           &nbsp;
              <div>
              	<form  th:object="${listPatients}">
-             	<div class="row filter-row">
+             	<div class="row ">
              		<div class="col-sm-6 col-md-3">
              		<div class="form-group form-focus">
                             <label class="focus-label">Enter first or last name</label>
@@ -45,13 +45,14 @@
                      </div>       
                      </div>
              		 &nbsp;
-             		 <div class="col-sm-6 col-md-3">
+             		 
+             		 <div class="col-sm-6 col-md-2" >
              		 <input type="submit" value="Search" class="btn btn-success btn-block" />
+             		 </div> 		
+             		<div class="col-sm-6 col-md-2" >
+    					<input  class="btn btn-success" type="button" value="Clear" id="btnClear" onclick="clearSearch()" />
              		 </div> 
              		
-             		<div class="col-sm-6 col-md-3">
-    					<input class="btn btn-success btn-block" type="button" value="Clear" id="btnClear" onclick="clearSearch()" />
-             		 </div> 
              		 </div>
              	</form>
              </div>    
@@ -84,8 +85,8 @@
 												<a href="#" class="action-icon dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><i class="fa fa-ellipsis-v"></i></a>
 												<div class="dropdown-menu dropdown-menu-right">
 													<a class="dropdown-item" th:href="@{'editpatient/' + ${patient.id}}"><i class="fa fa-pencil m-r-5"></i> Edit</a>
-													<a class="dropdown-item"  th:href="@{'deletepatient/' + ${patient.id}}" data-toggle="modal" data-target="#delete_patient"><i class="fa fa-trash-o m-r-5"></i> Delete</a>
-													<a class="dropdown-item" th:href="@{'profilepatient/' + ${patient.id}}"><i class="fa fa-pencil m-r-5"></i> Profile</a>
+													<a class="dropdown-item"  th:href="@{'deletepatient/' + ${patient.id}}" onclick=" confirm('confirmer la suppression !')" ><i class="fa fa-trash-o m-r-5"></i> Delete</a>
+													<a class="dropdown-item" th:href="@{'profilepatient/' + ${patient.id}}"><i class="fa fa-eye m-r-5"></i> Profile</a>
 													
 												</div>
 											</div>
@@ -100,8 +101,7 @@
     </div>
 </div>
 <!-- menu here -->
-    
-</div>
+
 
 	
 		    
