--- a/src/main/resources/templates/includes/admin_side_menu.html
+++ b/src/main/resources/templates/includes/admin_side_menu.html
@@ -14,21 +14,22 @@
                     <a href="/admin/liststaff"><i class="fa fa-users"></i> <span>liste de Staff</span></a>
                 </li>
                 <hr>
+                <li> 
+                    <a href="/listdepartments"><i class="fa fa-hospital-o"></i> <span>Departments</span></a>
+                </li>
                 <li>
-                    <a href="/listdoctors"><i class="fa fa-user-md"></i> <span>Doctors</span></a>
+                    <a href="/listdoctors"><i class="fa fa-user-md"></i> <span>Medecins</span></a>
                 </li>
                 <!--<li>
                      <a href="/listpatients"><i class="fa fa-wheelchair"></i> <span>Patients</span></a>
                 </li> -->
-                <li>
+                <!-- <li>
                     <a href="appointments.html"><i class="fa fa-calendar"></i> <span>Appointments</span></a>
                 </li>
-                <!-- <li>
+                <li>
                     <a href="schedule.html"><i class="fa fa-calendar-check-o"></i> <span>Doctor Schedule</span></a>
                 </li>-->
-                <li> 
-                    <a href="/listdepartments"><i class="fa fa-hospital-o"></i> <span>Departments</span></a>
-                </li>
+                
                 <!-- <li class="submenu">
                     <a href="#"><i class="fa fa-user"></i> <span> Employees </span> <span class="menu-arrow"></span></a>
                     <ul style="display: none;">
