--- a/src/main/resources/templates/admin/staff_list.html
+++ b/src/main/resources/templates/admin/staff_list.html
@@ -46,7 +46,14 @@
 		    			<td th:text= "${staff.PhoneNumber}" > </td>
 		    			<td th:text= "${staff.Role}"> </td>
 		    			<td > 
-		    				<a th:href="@{'deletestaff/' + ${staff.id}}" onclick=" confirm('confirmer la suppression !')">Delete</a>
+		    				<div class="dropdown dropdown-action">
+								<a href="#" class="action-icon dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><i class="fa fa-ellipsis-v"></i></a>
+							<div class="dropdown-menu dropdown-menu-right">
+							<a class="dropdown-item" th:href="@{'editstaff/' + ${staff.id}}"><i class="fa fa-pencil m-r-5"></i> Edit</a>
+		    				<a class="dropdown-item" th:href="@{'deletestaff/' + ${staff.id}}" onclick=" confirm('confirmer la suppression !')"><i class="fa fa-trash-o m-r-5"></i>Delete</a>
+							
+							</div>
+							</div>
 		    			</td>
 		    		
 		    		</tr>
