--- a/src/main/resources/templates/department_list.html
+++ b/src/main/resources/templates/department_list.html
@@ -85,7 +85,7 @@
 		    </table>
 		    
 		    <div class="m-t-20 text-center">
-                                <button type="button" id="terminer-btn" class="btn btn-primary submit-btn">
+                                <button th:href="@{../..}" type="button" id="terminer-btn" class="btn btn-primary submit-btn">
                                     <i class="fa fa-chevron-left"> </i> Retour</button>
                </div>
 		 </div>
