--- a/src/main/resources/templates/doctors_bydepartment.html
+++ b/src/main/resources/templates/doctors_bydepartment.html
@@ -57,8 +57,9 @@
     <div class="page-wrapper">
         <div class="content">
          <div  class="col-sm-5 col-5">
-        	<h1>Doctors</h1>
+        	<h1>Medecins</h1>
         </div>
+        <br><br><br>
         
 		    <!--<table border="1">
 		    	<thead>
@@ -95,7 +96,7 @@
                     <div th:each="staff : ${listDoctorsbydepartment}" class="col-md-4 col-sm-4  col-lg-3">
                         <div class="profile-widget">
                             <div class="doctor-img">
-                                <a class="avatar" href="profile.html"><img alt="" src="assets/img/doctor-thumb-03.jpg"></a>
+                                <a class="avatar" href="profile.html"><img alt="" src="assets/img/doc.png"></a>
                             </div>
                             <div class="dropdown profile-action">
                                 <a href="#" class="action-icon dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><i class="fa fa-ellipsis-v"></i></a>
@@ -118,10 +119,7 @@
                                 <button type="button" id="terminer-btn" class="btn btn-primary submit-btn">
                                     <i class="fa fa-chevron-left"><a  th:href="/listdepartments"></a> </i> Retour</button>
                </div>
-               <div class="m-t-20 text-center">
-                                <button type="button" id="terminer-btn" class="btn btn-primary submit-btn">
-                                    <i class="fa fa-chevron-right"><a  th:href="/"></a> </i> Edit appointment</button>
-               </div>
+               
                
                
 </body>
