--- a/src/main/resources/templates/doctors_list.html
+++ b/src/main/resources/templates/doctors_list.html
@@ -59,10 +59,7 @@
          <div class="col-sm-5 col-5">
         	<h1>Doctors</h1>
          </div>
-         <div class="m-t-20 text-center">
-                                <button type="button" id="terminer-btn" class="btn btn-primary submit-btn">
-                                    <i class="fa fa-chevron-left"> </i> Retour</button>
-               </div>
+        <br><br><br>
 		    <!-- <table border="1">
 		    	<thead>
 		    		<tr>
@@ -97,13 +94,13 @@
 		     <div th:each="staff : ${listDoctors}" class="col-md-4 col-sm-4  col-lg-3">
                         <div class="profile-widget">
                             <div class="doctor-img">
-                                <a class="avatar" href="profile.html"><img alt="" src="assets/img/doctor-thumb-03.jpg"></a>
+                                <a class="avatar" href="profile.html"><img alt="" src="assets/img/doc.png"></a>
                             </div>
                             <div class="dropdown profile-action">
                                 <a href="#" class="action-icon dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><i class="fa fa-ellipsis-v"></i></a>
                                 <div class="dropdown-menu dropdown-menu-right">
-                                    <a class="dropdown-item" href="edit-doctor.html"><i class="fa fa-pencil m-r-5"></i> Edit</a>
-                                    <a class="dropdown-item" href="#" data-toggle="modal" data-target="#delete_doctor"><i class="fa fa-trash-o m-r-5"></i> Delete</a>
+                                    <a class="dropdown-item" href="edit-doctor.html"><i class="fa fa-pencil m-r-5"></i> Modifier</a>
+                                    <a class="dropdown-item" href="#" data-toggle="modal" data-target="#delete_doctor"><i class="fa fa-trash-o m-r-5"></i> Supprimer</a>
                                 </div>
                             </div>
                             <h4  th:text= "${staff.LastName} +'&nbsp' +  ${staff.FirstName}"   class="doctor-name text-ellipsis"><a href="profile.html"></a></h4>
