--- a/src/main/resources/templates/gp/rdv-details.html
+++ b/src/main/resources/templates/gp/rdv-details.html
@@ -33,6 +33,9 @@
                     <div class="col-sm-8 col-9 text-right m-b-20">
                         <a th:href="${'../../gp/facture/'+rdv.id}" class="btn btn btn-primary btn-rounded float-right"><i class="fa fa-book"></i>  Generer la facture</a>
                     </div>
+                    <div class="col-sm-8 col-9 text-right m-b-20">
+                        <a th:href="${'/deleterdv/'+rdv.id}" class="btn btn btn-primary btn-rounded float-right"><i class="fa fa-book"></i>  Generer la facture</a>
+                    </div>
                 </div>
                 </span>
                 <div class="row">
